external-crates/move/crates/move-compiler/tests/move_check/parser/module_missing_rbrace.move
module 0x42::M {
    fun f() {}
// }
